--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "0.8.3",
     "sass-loader": "^4.0.2",
     "style-loader": "0.13.1",
+    "ts-loader": "^1.3.1",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
     "webpack-cleanup-plugin": "^0.4.1",
@@ -32,7 +33,9 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
+    "whatwg-fetch": "^2.0.1"
   },
   "scripts": {
     "start": "nodemon server.js",
