--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "awesome-typescript-loader": "^3.0.0-beta.9",
     "babel-core": "6.18.2",
     "babel-loader": "6.2.9",
     "babel-plugin-transform-class-properties": "^6.19.0",
