--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "webpack-dev-server": "1.16.2"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.5",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "flux": "^3.1.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
