--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
     "flux": "^3.1.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.1.0",
     "whatwg-fetch": "^2.0.1"
   },
   "scripts": {
