--- a/package.json
+++ b/package.json
@@ -13,15 +13,33 @@
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-runtime": "^6.18.0",
+    "browserify": "^13.1.1",
+    "chai": "^3.5.0",
     "css-loader": "0.26.1",
+    "enzyme": "^2.6.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "^2.24.1",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-browserify": "^5.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-es6-shim": "^1.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-requirejs": "^1.1.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
+    "mocha": "^3.2.0",
     "node-sass": "^3.13.0",
     "nodemon": "^1.11.0",
+    "phantomjs-prebuilt": "^2.1.14",
     "postcss-loader": "^1.2.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-scripts": "0.8.3",
+    "requirejs": "^2.3.2",
     "sass-loader": "^4.0.2",
     "style-loader": "0.13.1",
     "ts-loader": "^1.3.1",
@@ -36,6 +54,7 @@
     "express": "^4.14.0",
     "flux": "^3.1.0",
     "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
@@ -47,7 +66,8 @@
   "scripts": {
     "start": "nodemon server.js",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "./node_modules/karma/bin/karma start --single-run",
+    "test:watch": "./node_modules/karma/bin/karma start",
     "eject": "react-scripts eject"
   }
 }
