--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "flux": "^3.1.0",
+    "normalizr": "^2.3.0",
     "react": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
     "react-dom": "^15.4.1",
