--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "express": "^4.14.0",
     "flux": "^3.1.0",
     "normalizr": "^2.3.0",
+    "rc-slider": "^5.4.0",
     "react": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-input-range": "^0.9.3",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
