--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "beforeEach": false,
     "it": false,
     "expect": false,
-    "jasmine": false
+    "jasmine": false,
+    "spyOn": false
   }
 }
