--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react": "^6.8.0",
     "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fetch-mock": "^5.6.2",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "^2.24.1",
     "jasmine-core": "^2.5.2",
@@ -46,6 +47,7 @@
     "postcss-loader": "^1.2.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-scripts": "0.8.3",
+    "redux-mock-store": "^1.2.1",
     "requirejs": "^2.3.2",
     "sass-loader": "^4.0.2",
     "style-loader": "0.13.1",
@@ -60,6 +62,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "flux": "^3.1.0",
+    "nock": "^9.0.2",
     "normalizr": "^2.3.0",
     "rc-slider": "^5.4.0",
     "react": "^15.4.1",
