--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "whatwg-fetch": "^2.0.1"
   },
   "scripts": {
-    "start": "node bin/www",
+    "start": "NODE_ENV=production node bin/www",
+    "dev": "nodemon bin/www",
     "build": "react-scripts build",
     "test": "./node_modules/karma/bin/karma start --single-run",
     "test:watch": "./node_modules/karma/bin/karma start",
